# worldsim-world-builder

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  sync-check.yml
_prompts/: .sync-manifest  .synced  __header__.py  __init__.py  base.py  client.py
_schemas/: .sync-manifest  __header__.py  __init__.py  agent_contract.py  schemas.py  version.py
prompts/: location_detail.md  turn_update.md  world_init.md
src/worldsim_world_builder/: __init__.py  agent.py
tests/: test_contract.py  test_smoke.py
